--- a/LABA1/LABA1.vcxproj.filters
+++ b/LABA1/LABA1.vcxproj.filters
@@ -15,12 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="ImplementingClassMethods.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="FunctionHeaders.h">
+    <ClInclude Include="MethodDeclaration.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
