--- a/TestsForList/TestsForList.vcxproj
+++ b/TestsForList/TestsForList.vcxproj
@@ -156,7 +156,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\LABA1\main.cpp" />
+    <ClCompile Include="..\LABA1\ImplementingClassMethods.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -166,7 +166,7 @@
     <ClCompile Include="TestsForList.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\LABA1\FunctionHeaders.h" />
+    <ClInclude Include="..\LABA1\MethodDeclaration.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
