--- a/TestsForList/TestsForList.vcxproj.filters
+++ b/TestsForList/TestsForList.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\LABA1\main.cpp">
+    <ClCompile Include="..\LABA1\ImplementingClassMethods.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +29,7 @@
     <ClInclude Include="pch.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\LABA1\FunctionHeaders.h">
+    <ClInclude Include="..\LABA1\MethodDeclaration.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
